# parallel-task-runner

./: README.md  README.ru.md  main.py  pyproject.toml
src/parallel_task_runner/: __init__.py  cli.py  runner.py
tests/: test_cli.py  test_runner.py
